crates/fossil-graph/tests/snapshots/schemas__materialize_graph_result.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (viewport::MaterializeGraphResult)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: MaterializeGraphResult
type: object
required:
  - edges
  - truncated
  - vertices
properties:
  edges:
    type: array
    items:
      $ref: "#/definitions/MaterializedEdge"
  truncated:
    description: "True when the vertex set was capped by `limit` (edges to dropped vertices are omitted, mirroring the canvas's orphan-edge drop)."
    type: boolean
  vertices:
    type: array
    items:
      $ref: "#/definitions/MaterializedVertex"
definitions:
  MaterializedEdge:
    type: object
    required:
      - predicate
      - source
      - target
    properties:
      predicate:
        type: string
      source:
        description: "Source vertex `subject` (dense→subject resolved)."
        type: string
      target:
        description: "Target vertex `subject` (dense→subject resolved)."
        type: string
  MaterializedVertex:
    type: object
    required:
      - id
      - label
      - type_name
    properties:
      id:
        description: "The vertex `subject` IRI — the canvas's string node id."
        type: string
      label:
        description: "Display label: first present of `name`/`label`/`title`, else the subject."
        type: string
      type_name:
        description: Vertex type short name.
        type: string
