crates/fossil-graph/tests/snapshots/schemas__operation_envelope.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: schema_for! (Operation)
---
$schema: "http://json-schema.org/draft-07/schema#"
title: Operation
description: "All graph operations dispatchable on the surface.\n\nThe `tag = \"verb\"` serde representation makes the wire form `{ \"verb\": \"schema\", \"params\": { … } }`, whatever transport carries it.\n\n# It serialises, and it does not deserialise\n\nThere is no `Deserialize` impl, and its absence is load-bearing rather than an oversight: `execute_sql` carries [`RawSql`], and [`Operation::from_wire`] is the one door from wire JSON because that door takes the permission. [`raw_sql`] is the argument."
oneOf:
  - type: object
    required:
      - params
      - verb
    properties:
      params:
        $ref: "#/definitions/SchemaParams"
      verb:
        type: string
        enum:
          - schema
  - type: object
    required:
      - params
      - verb
    properties:
      params:
        $ref: "#/definitions/ExecuteSqlParams"
      verb:
        type: string
        enum:
          - execute_sql
definitions:
  ExecuteSqlParams:
    type: object
    required:
      - sql
    properties:
      row_cap:
        description: "Hard cap on rows returned to the caller. The executor MUST apply an outer `LIMIT` regardless of what the user's SQL contains."
        default: 10000
        type: integer
        format: uint32
        minimum: 0
      sql:
        type: string
    additionalProperties: false
  SchemaParams:
    type: object
    properties:
      field:
        description: "Name a field to narrow the statistics to it and pick up its samples. Ignored without `vertex_type`."
        default: ~
        type:
          - string
          - "null"
      stats:
        description: "Every vertex type's per-field statistics, on its [`VertexTypeSummary::stats`] — one batched query per type, the same one `vertex_type` spends on one. What a host drawing a schema panel asks for instead of one call per type. Samples are never part of it."
        default: false
        type: boolean
      vertex_type:
        description: "Name a vertex type to also get its per-field statistics. Omitted, the answer is the type lists alone and no field is queried."
        default: ~
        type:
          - string
          - "null"
    additionalProperties: false
