crates/fossil-graph/tests/snapshots/schemas__read_result.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (discovery::ReadResult)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: ReadResult
type: object
required:
  - rows
properties:
  rows:
    description: "Rows as opaque JSON objects so the verb stays generic across arbitrary vertex shapes. `subject` rides along as the identity; the writer's layout columns do not — those are the tiles' business, not the algebra's."
    type: array
    items: true
