crates/fossil-graph/tests/snapshots/schemas__schema_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (schema::SchemaParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: SchemaParams
type: object
properties:
  field:
    description: "Name a field to narrow the statistics to it and pick up its samples. Ignored without `vertex_type`."
    default: ~
    type:
      - string
      - "null"
  stats:
    description: "Every vertex type's per-field statistics, on its [`VertexTypeSummary::stats`] — one batched query per type, the same one `vertex_type` spends on one. What a host drawing a schema panel asks for instead of one call per type. Samples are never part of it."
    default: false
    type: boolean
  vertex_type:
    description: "Name a vertex type to also get its per-field statistics. Omitted, the answer is the type lists alone and no field is queried."
    default: ~
    type:
      - string
      - "null"
additionalProperties: false
