crates/fossil-graph/tests/snapshots/schemas__schema_result.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (schema::SchemaResult)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: SchemaResult
type: object
required:
  - edges
  - fields
  - vertices
properties:
  edges:
    type: array
    items:
      $ref: "#/definitions/EdgeTypeSummary"
  fields:
    description: "Per-field statistics for the named `vertex_type`, narrowed to `field` when one was named. **Empty when no `vertex_type` was named** — that is the whole of the cheap/expensive distinction."
    type: array
    items:
      $ref: "#/definitions/FieldStat"
  vertices:
    type: array
    items:
      $ref: "#/definitions/VertexTypeSummary"
definitions:
  EdgeTypeSummary:
    type: object
    required:
      - count
      - iri
      - name
      - source_type
      - table_name
      - target_type
    properties:
      count:
        type: integer
        format: uint64
        minimum: 0
      iri:
        type: string
      name:
        type: string
      source_type:
        type: string
      table_name:
        description: "Convenience: `DuckDB` view name `{source}_{name}_{target}`. Pre-computed here so bindings don't reimplement the `GraphAr` edge naming convention."
        type: string
      target_type:
        type: string
  FieldKind:
    description: "What kind of VALUE a field holds, read off its `GraphAr` data type alone.\n\nOrthogonal to [`FieldRole`], which also weighs the name and the cardinality: an `int64` `user_id` is an `Identifier` by role and `Numeric` by kind. The kind is what decides whether `aggregate` may bin the field (`Numeric` and `Temporal` have ranges, `Categorical` groups by value only) and whether an axis is a time axis. It is the one table of `GraphAr` spellings; a reader asks for the kind instead of keeping a copy of it."
    oneOf:
      - description: "An integer or floating-point spelling (`int8` … `uint64`, `float`, `double`)."
        type: string
        enum:
          - numeric
      - description: "`date`, `timestamp` or `time`."
        type: string
        enum:
          - temporal
      - description: "Everything else — `string`, `bool`, and any spelling this table does not know."
        type: string
        enum:
          - categorical
  FieldRole:
    description: "Inferred role for chart-axis defaults. Mirrors keasy `lib/graph-schema.ts:: inferRole` — promoted here to be authoritative."
    type: string
    enum:
      - identifier
      - dimension
      - measure
  FieldStat:
    type: object
    required:
      - datatype
      - distinct
      - kind
      - name
      - role
      - samples
    properties:
      datatype:
        description: "`GraphAr` data-type spelling (`string`, `int64`, `double`, …)."
        type: string
      distinct:
        description: "Distinct value count (`COUNT(DISTINCT field)`)."
        type: integer
        format: uint64
        minimum: 0
      kind:
        description: "What an axis over the field can do with it — see [`FieldKind`]."
        allOf:
          - $ref: "#/definitions/FieldKind"
      name:
        type: string
      role:
        description: Authoritative chart-axis role.
        allOf:
          - $ref: "#/definitions/FieldRole"
      samples:
        description: "Up to 8 non-null values. **Populated only when the call named this field**: they are a second query, and a bare per-type call would pay it once per column."
        type: array
        items:
          type: string
  VertexTypeSummary:
    type: object
    required:
      - count
      - fields
      - iri
      - name
      - stats
    properties:
      count:
        description: "How many vertices the type has.\n\n**Not from the manifest, despite what this said.** The executor answers it with `count_rows` — a `SELECT count(*)` over the type's tiles. The manifest carries a declared `vertex_count` now, so the query is a second way to ask one question and can go; what it buys until then is that it measures the bytes rather than trusting the declaration, which is the disagreement `packages/corpus/guards`' `declared-count` guard exists to catch."
        type: integer
        format: uint64
        minimum: 0
      fields:
        description: "Field names — what a follow-up `schema { vertex_type, field }` may name."
        type: array
        items:
          type: string
      iri:
        description: Full RDF type IRI.
        type: string
      name:
        description: "Short local name as used in `DuckDB` table identifier (e.g. `\"Person\"`)."
        type: string
      stats:
        description: "Per-field statistics for this type, in the order of [`Self::fields`]. **Empty unless the call set `stats`**; with it, empty only for a type that declares no field."
        type: array
        items:
          $ref: "#/definitions/FieldStat"
