crates/fossil-graph/tests/snapshots/schemas__search_by_label_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (discovery::SearchByLabelParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: SearchByLabelParams
type: object
required:
  - query
properties:
  query:
    type: string
  top_k:
    default: 20
    type: integer
    format: uint32
    minimum: 0
  vertex_types:
    description: Restrict the vector search to a subset of vertex types. Empty = all.
    default: []
    type: array
    items:
      type: string
additionalProperties: false
