crates/fossil-graph/tests/snapshots/schemas__search_by_label_result.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (discovery::SearchByLabelResult)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: SearchByLabelResult
type: object
required:
  - hits
properties:
  hits:
    type: array
    items:
      $ref: "#/definitions/SearchHit"
definitions:
  SearchHit:
    type: object
    required:
      - iri
      - label
      - score
      - vertex_type
    properties:
      iri:
        type: string
      label:
        type: string
      score:
        description: "Cosine similarity in [0, 1]."
        type: number
        format: float
      vertex_type:
        type: string
