crates/fossil-graph/tests/snapshots/schemas__set_selection_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (viewport::SetSelectionParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: SetSelectionParams
type: object
properties:
  selection:
    description: "Mosaic-Selection-compatible filter expression. `None` clears the current selection so the next viewport call returns the full bbox."
additionalProperties: false
